@@ -1,3 +1,7 @@
+2017-06-13  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftcommon.c (FTDemo_Draw_Header): Simplify.
+
 2017-06-10  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftcommon.c (FTDemo_Draw_Header): Fix compiler warning.
